text change log

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <body class="index">
     <div id="main" role="main">
       <h1>Joshua Dendauw</h1>
-      <p>One sentence about what this is.</p>
+      <p>My professional portfolio</p>
     </div>
   </body>
 </html>
