--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <body class="index">
     <div id="main" role="main">
       <h1>Joshua Dendauw</h1>
-      <p>My professional portfolio</p>
+      <p>My professional portfolio, which shall contain my current work for my college class of CS160.</p>
     </div>
   </body>
 </html>
