Self portrait added

--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
   </head>
   <body class="index">
     <div id="main" role="main">
-      <h1>Joshua Dendauw</h1>
+      <h1>Joshua Dendauw <img src="me.jpg" width="200"></h1>
+
       <p>My professional portfolio, which shall contain my current work for my college class of CS160.</p>
     </div>
   </body>
