<p> text change, color and size

--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
   <body class="index">
     <div id="main" role="main">
       <h1>Joshua Dendauw <img src="me.jpg" width="200"></h1>
-
-      <p>My professional portfolio, which shall contain my current work for my college class of CS160.</p>
+      <p>My name is Joshua Dendauw.  I am a college student (currently), a gamer, and this is my portfolio for my Computer Science 160 class.</p>
     </div>
   </body>
 </html>
