completed sentence for <p> 2

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <div id="main" role="main">
       <h1>Joshua Dendauw <img src="me.jpg" width="200"></h1>
       <p>My name is Joshua Dendauw.  I am a college student (currently), a gamer, and this is my portfolio for my Computer Science 160 class.</p>
-      <p>I have a <a href="https://www.youtube.com/user/Draconmaster99">youtube channel</a>
+      <p>I have a <a href="https://www.youtube.com/user/Draconmaster99">youtube channel</a> for entertaining video game videos and for showing progress for my Computer Science projects.</p>
     </div>
   </body>
 </html>
