--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       <p>My name is Joshua Dendauw.  I am a college student (currently), a gamer, and this is my portfolio for my Computer Science 160 class.</p>
       <p>I have a <a href="https://www.youtube.com/user/Draconmaster99">youtube channel</a> for entertaining video game videos and for showing progress for my Computer Science projects.</p>
       <h2>Projects</h2>
-      <h3><img src="zombulator image.png" width="200"> Zombie Outbreak Simulator</h3>
+      <h3><img src="zombulator/image.png" width="200"> Zombie Outbreak Simulator</h3>
       <p>A javascript application that uses p5.js to visualize a zombie outbreak battle between humans and zombies.  This is a project that is an exploration of code, probability and simulation.</p>
       <p><a href="https://dendiesy.github.io/CS160-Zombulator">Check it out</a>   <a href="https://github.com/Dendiesy/CS160-Zombulator">Code on Github</a></p>
     </div>
